# Secure-Cloud

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
src/: bank.hpp  client.cpp  dhaes.hpp  dphil-ES16BTECH11028.cpp  myint.hpp  server.cpp  test_this.cpp  utils.hpp
src/VM/: vm.cpp
tests/: bankTest.cpp  dhtest.cpp  myIntTest.cpp  utilsTest.cpp
